Fixing ScrollBar issues with viewport height

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,13 @@
   --tertiary-background-color: #595a5a;
   --primary-text-color: #ffffff;
   --primary-text-label-color: #d7d7d9;
+  --header-height: 84px;
+}
+
+@media (max-width: 600px) {
+  :root {
+    --header-height: 60px; /* Smaller header on mobile devices */
+  }
 }
 
 *::-webkit-scrollbar {
@@ -34,6 +41,11 @@
   background: var(--secondary-background-color); /* Optional: color of the corner where both scrollbars meet */
 }
 
-:root {
-  --header-height: 4rem; /* Adjust based on actual height of your header */
+.main-content {
+  min-height: calc(100vh - var(--header-height));
+}
+
+html, body {
+  padding: 0;
+  margin: 0;
 }
